src/test/ui/issues/issue-80371.stderr
error[E0277]: the trait bound `Header<'_>: Copy` is not satisfied
  --> $DIR/issue-80371.rs:8:19
   |
LL |     let headers = [Header{value: &[]}; 128];
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Header<'_>`
   |
   = note: the `Copy` trait is required because the repeated element will be copied
   = note: this array initializer can be evaluated at compile-time, see issue #49147 <https://github.com/rust-lang/rust/issues/49147> for more information
   = help: add `#![feature(const_in_array_repeat_expressions)]` to the crate attributes to enable

error[E0277]: the trait bound `Header<'_>: Copy` is not satisfied
  --> $DIR/issue-80371.rs:13:19
   |
LL |     let headers = [Header{value: &[0]}; 128];
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `Header<'_>`
   |
   = note: the `Copy` trait is required because the repeated element will be copied
   = note: this array initializer can be evaluated at compile-time, see issue #49147 <https://github.com/rust-lang/rust/issues/49147> for more information
   = help: add `#![feature(const_in_array_repeat_expressions)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
